--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "website"
+  title: "Triathlon"
   navbar:
     left:
       - href: index.qmd
@@ -22,6 +22,3 @@ format:
       - brand
     css: styles.css
     toc: true
-
-
-
